--- a/Test Scene/Assets/TODO
+++ b/Test Scene/Assets/TODO
@@ -1,8 +1,11 @@
-Stuff to do:
-
-1. Make it so you can't open inventory/quest/map/spells when in escape/pause screen
-2. Start game from main screen, properly load/save and create new profiles]
+TO DO:
+2. Start game from main screen, properly load/save and create new profiles
 3. Find a way to package scene contents (gui/ui/player) when transferring to different scenes
-4. Automatically fill up avaialble spells based on current class(es)
 5. Properly scale game based on resolution
-6. On play, the game starts paused for some reason?
+
+
+FINISHED:
+1. Make it so you can't open inventory/quest/map/spells when in escape/pause screen, esc exits in-game uis (5/1/2020)
+4. Automatically fill up available spells based on current class(es) (5/1/2020)
+6. On play, the game starts paused for some reason? - FIXED (5/1/2020)
+7. Fix auto-fill input key text based on player profile (last saved input vals) (4/30/2020)
